# Trareon-Transcribe

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Code-Desktop.md  PRD-Desktop.md  README.md  RFC-Desktop.md  SECURITY.md  Task-Desktop.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
assets/: trareon-transcribe-icon.icns
config/: branding.py  instance_lock.py  keyring_store.py  paths.py  settings.py  version.py
docs/: design.md
engine/: __init__.py  audio_capture.py  audio_probe.py  dedupe.py  demo_seed.py  diarization.py  pipeline.py  session_store.py  stt.py  tone_test.py  translate.py  vad.py
export/: naming.py  writer.py
packaging/: trareon-transcribe.spec
scripts/: Open Trareon Transcribe.command  build.sh  capture_screenshots.py  functional_drive_mac.py  live_control_mac.py  mac_gate.sh  open-macos-app.sh  package_release.sh  run_mac_app.sh  seed_dummy_session.py  smoke_frozen.py  smoke_local_mac.py  strip_cursor_coauthor.sh  trareon_ctl.py
setup/: __init__.py  create_multi_output  create_multi_output.swift  deps.py  disk.py  gate.py  model_dl.py  whisper_models.py
tests/: test_audio_levels.py  test_branding.py  test_caption_restore.py  test_dedupe.py  test_demo_seed.py  test_deps_routing_message.py  test_disk.py  test_export_writer.py  test_export_writer_edge.py  test_geometry.py  test_instance_lock.py  test_keyring_store.py  test_logging_redact.py  test_model_dl_urls.py  test_naming.py  test_paths.py  test_pipeline_integration.py  test_remote_control.py  test_resources.py  test_vad.py  (+13 more)
(+23 files in other folders)
