[project]
name = "trareon-transcribe"
version = "0.1.0"  # keep in sync with config/version.py
description = "Offline live meeting transcription for macOS and Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Trareon" }]
dependencies = [
  "customtkinter>=5.2.2",
  "sounddevice>=0.5.1",
  "numpy>=1.26.0",
  "psutil>=5.9.8",
  "webrtcvad-wheels>=2.0.14; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "webrtcvad>=2.0.10; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "keyring>=25.0.0",
  "Pillow>=10.0.0",
  "pystray>=0.19.5",
  "pyinstaller>=6.3.0",
]

[project.optional-dependencies]
diarization = ["pyannote.audio>=3.1.0", "torch>=2.0.0"]
translate = ["argostranslate>=1.9.0"]
dev = [
  "ruff>=0.6.0",
  "bandit>=1.7.9",
  "pytest>=8.0.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
trareon-transcribe = "main:main"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S603", "S606", "S607", "S310", "S110", "S112", "S202", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
